--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,24 +12,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rohangupta/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFlow version: 2.18.0\n",
-      "KerasNLP version: 0.19.1\n"
+      "Using TensorFlow backend\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np # linear algebra\n",
-    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "import tensorflow as tf\n",
     "import keras_core as keras\n",
     "import keras_nlp\n",
+    "from keras_tuner import RandomSearch\n",
     "from sklearn.metrics import ConfusionMatrixDisplay, confusion_matrix\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.utils.class_weight import compute_class_weight\n",
@@ -42,18 +51,13 @@
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Embedding, LSTM, Dense, Bidirectional, Dropout\n",
-    "from tensorflow.keras.callbacks import EarlyStopping\n",
-    "from tensorflow.keras.optimizers import Adam\n",
-    "\n",
-    "\n",
-    "\n",
-    "print(\"TensorFlow version:\", tf.__version__)\n",
-    "print(\"KerasNLP version:\", keras_nlp.__version__)"
+    "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau, ModelCheckpoint\n",
+    "from tensorflow.keras.optimizers import Adam"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +175,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +265,7 @@
        "4  11     NaN      NaN      Typhoon Soudelor kills 28 in China and Taiwan"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +649,7 @@
        "4       1      88  [just, got, sent, photo, ruby, alaska, smoke, ...  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +808,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Search: Running Trial #1\n",
+      "\n",
+      "Value             |Best Value So Far |Hyperparameter\n",
+      "100               |100               |embedding_dim\n",
+      "32                |32                |lstm_units\n",
+      "0.2               |0.2               |lstm_dropout\n",
+      "0.2               |0.2               |recurrent_dropout\n",
+      "96                |96                |dense_units\n",
+      "0.0011            |0.0011            |l2_rate\n",
+      "0.5               |0.5               |dense_dropout\n",
+      "0.001             |0.001             |learning_rate\n",
+      "\n",
+      "Epoch 1/30\n"
+     ]
+    }
+   ],
+   "source": [
+    "def build_model(hp):\n",
+    "    model = Sequential()\n",
+    "    \n",
+    "    # Tune embedding dimension\n",
+    "    model.add(Embedding(\n",
+    "        vocab_size,\n",
+    "        output_dim=hp.Int('embedding_dim', min_value=50, max_value=300, step=50)\n",
+    "    ))\n",
+    "    \n",
+    "    # Tune LSTM units and dropout\n",
+    "    model.add(Bidirectional(LSTM(\n",
+    "        units=hp.Int('lstm_units', min_value=32, max_value=128, step=32),\n",
+    "        dropout=hp.Float('lstm_dropout', min_value=0.2, max_value=0.5, step=0.1),\n",
+    "        recurrent_dropout=hp.Float('recurrent_dropout', min_value=0.2, max_value=0.5, step=0.1)\n",
+    "    )))\n",
+    "    \n",
+    "    # Tune dense layer\n",
+    "    model.add(Dense(\n",
+    "        units=hp.Int('dense_units', min_value=32, max_value=128, step=32),\n",
+    "        activation='relu',\n",
+    "        kernel_regularizer=tf.keras.regularizers.l2(\n",
+    "            hp.Float('l2_rate', min_value=0.0001, max_value=0.01, step=0.001)\n",
+    "        )\n",
+    "    ))\n",
+    "    \n",
+    "    model.add(Dropout(hp.Float('dense_dropout', min_value=0.3, max_value=0.6, step=0.1)))\n",
+    "    \n",
+    "    model.add(Dense(1, activation='sigmoid'))\n",
+    "    \n",
+    "    # Tune learning rate\n",
+    "    optimizer = tf.keras.optimizers.Adam(\n",
+    "        learning_rate=hp.Choice('learning_rate', values=[1e-2, 1e-3, 1e-4, 1e-5])\n",
+    "    )\n",
+    "    \n",
+    "    model.compile(\n",
+    "        optimizer=optimizer,\n",
+    "        loss='binary_crossentropy',\n",
+    "        metrics=['accuracy']\n",
+    "    )\n",
+    "    return model\n",
+    "\n",
+    "tuner = RandomSearch(\n",
+    "    build_model,\n",
+    "    objective='val_accuracy',\n",
+    "    max_trials=40,\n",
+    "    executions_per_trial=1,\n",
+    "    directory='tuner_dir',\n",
+    "    project_name='disaster_tweets'\n",
+    ")\n",
+    "\n",
+    "# Callbacks\n",
+    "callbacks = [\n",
+    "    EarlyStopping(patience=3, monitor='val_loss', restore_best_weights=True),\n",
+    "    ReduceLROnPlateau(factor=0.1, patience=3),\n",
+    "    ModelCheckpoint(\"best_model.keras\", save_best_only=True, monitor='val_accuracy', mode='max'),\n",
+    "]\n",
+    "\n",
+    "# Run the search\n",
+    "tuner.search(\n",
+    "    X_train, y_train,\n",
+    "    epochs=30,\n",
+    "    validation_data=(X_val, y_val),\n",
+    "    callbacks=[early_stop],\n",
+    "    batch_size=64\n",
+    ")\n",
+    "\n",
+    "# Get best model\n",
+    "best_model = tuner.get_best_models(num_models=1)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print a summary of the search results\n",
+    "tuner.results_summary()\n",
+    "\n",
+    "# Retrieve the best model and its hyperparameters\n",
+    "best_model = tuner.get_best_models(num_models=1)[0]\n",
+    "best_hp = tuner.get_best_hyperparameters(num_trials=1)[0]\n",
+    "\n",
+    "print(\"Best Hyperparameters:\")\n",
+    "print(best_hp.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -817,12 +944,12 @@
    ],
    "source": [
     "# Train the model\n",
-    "history = model.fit(\n",
+    "history = best_model.fit(\n",
     "    X_train, y_train,\n",
     "    validation_data=(X_val, y_val),\n",
     "    epochs=50,  # Let early stopping handle termination\n",
     "    batch_size=64,  # Try smaller batches\n",
-    "    callbacks=[early_stop],\n",
+    "    callbacks=callbacks,\n",
     "    class_weight=class_weights,\n",
     "    verbose=1\n",
     ")"
@@ -877,6 +1004,27 @@
     "plt.legend()\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make predictions on the padded test data\n",
+    "test_predictions = model.predict(X_test_padded)\n",
+    "\n",
+    "# Create submission DataFrame\n",
+    "submission_df = pd.DataFrame({\n",
+    "    'id': df_test['id'],\n",
+    "    'target': test_predictions.flatten()  # Flatten from 2D array to 1D\n",
+    "})\n",
+    "\n",
+    "# Save to CSV\n",
+    "submission_df.to_csv('submission.csv', index=False)\n",
+    "\n",
+    "print(\"Submission file saved as submission.csv\")"
    ]
   }
  ],
